# parseable_dataclasses

./: pyproject.toml  temp.py
.github/workflows/: python-publish.yml
html/parseable_dataclasses/: mixin.html
src/parseable_dataclasses/: __init__.py  mixin.py
tests/: test_mixin.py
