[project]
name = "parseable-dataclasses"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
parseable-dataclasses = "parseable_dataclasses:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
