[project]
name = "parseable-dataclasses"
version = "0.1.0"
description = "Dataclass extension to use argparse"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
parseable-dataclasses = "parseable_dataclasses:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pdoc3>=0.11.6",
    "pre-commit>=4.2.0",
]
